@@ -22,13 +22,19 @@
 package io.crate.execution.engine.aggregation.impl;
 
 import com.google.common.collect.ImmutableList;
+import io.crate.execution.engine.aggregation.AggregationFunction;
 import io.crate.metadata.FunctionIdent;
 import io.crate.metadata.FunctionImplementation;
+import io.crate.metadata.FunctionName;
+import io.crate.metadata.SearchPath;
+import io.crate.metadata.functions.Signature;
 import io.crate.operation.aggregation.AggregationTest;
 import io.crate.types.DataType;
 import io.crate.types.DataTypes;
 import io.crate.types.ObjectType;
 import org.junit.Test;
+
+import java.util.List;
 
 public class MaximumAggregationTest extends AggregationTest {
 
@@ -38,7 +44,10 @@ public class MaximumAggregationTest extends AggregationTest {
 
     @Test
     public void testReturnType() throws Exception {
-        FunctionImplementation max = functions.getQualified(new FunctionIdent("max", ImmutableList.of(DataTypes.INTEGER)));
+        FunctionImplementation max = functions.getQualified(
+            Signature.aggregate("max", DataTypes.INTEGER.getTypeSignature(), DataTypes.INTEGER.getTypeSignature()),
+            List.of(DataTypes.INTEGER)
+        );
         assertEquals(DataTypes.INTEGER, max.info().returnType());
     }
 
